Refactor Transcribe+ notebook to TranscribePlus and update README
- Renamed Transcribe+.ipynb to TranscribePlus.ipynb for consistency.
- Updated README.md to reflect the new notebook name and correct links.
- Removed the old Transcribe+.ipynb file.
- Added new TranscribePlus.ipynb with enhanced audio transcription features.

--- a/notebooks/TranscribePlus.ipynb
+++ b/notebooks/TranscribePlus.ipynb
@@ -8,7 +8,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yoSiRFvRQ4Og",
-        "outputId": "218c6e55-6fe3-4aa9-e3a0-8a2180e12d71"
+        "outputId": "cb8f89d6-ccd2-44d2-f6f8-d5a6fd8b086e"
       },
       "outputs": [],
       "source": [
@@ -38,7 +38,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "uwrfhTRERBfr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uwrfhTRERBfr",
+        "outputId": "1eb94bda-3972-4ef8-a049-ce2cc7dba22e"
       },
       "outputs": [],
       "source": [
@@ -48,7 +52,7 @@
         "import subprocess\n",
         "\n",
         "source_type = \"Youtube 链接\" # @param [\"\\u672C\\u5730\\u8DEF\\u5F84\", \"Google Drive\", \"Youtube \\u94FE\\u63A5\"]\n",
-        "source_value = \"https://www.youtube.com/watch?v=W85F-UmnbF4\" # @param {type:\"string\"}\n",
+        "source_value = \"https://www.youtube.com/watch?v=WCDLyXJgbIo\" # @param {type:\"string\"}\n",
         "\n",
         "audio_file_path = \"\"\n",
         "base_name = \"\"  # 用于后续生成 lrc 的主文件名\n",
@@ -122,9 +126,79 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "4Rvo_3kKycYG",
+        "outputId": "7907de35-bd76-43cd-a9eb-bbe3b5d6ee8a"
+      },
+      "outputs": [],
+      "source": [
+        "!pip install -q demucs\n",
+        "\n",
+        "# @title 2.5 人声分离 (可选：去除 BGM 仅保留人声)\n",
+        "import shutil\n",
+        "import subprocess\n",
+        "\n",
+        "if not audio_file_path or not os.path.exists(audio_file_path):\n",
+        "    print(\"❌ 未发现有效的音频文件路径，请先执行第 2 步\")\n",
+        "else:\n",
+        "    # 准备临时文件名，防止 demucs 处理带特殊字符的文件名出错\n",
+        "    original_ext = os.path.splitext(audio_file_path)[1]\n",
+        "    temp_input = \"/content/temp_sep_input\" + original_ext\n",
+        "    shutil.copy(audio_file_path, temp_input)\n",
+        "\n",
+        "    print(f\"正在提取人声与伴奏 (使用 mdx_extra 模型)...\")\n",
+        "    print(\"注意：首次运行会下载模型（约 4GB），请耐心等待。\")\n",
+        "\n",
+        "    try:\n",
+        "        # 运行 demucs 分离人声 (vocals) 和 伴奏 (no_vocals)\n",
+        "        subprocess.run(\n",
+        "            [\"python3\", \"-m\", \"demucs.separate\",\n",
+        "              \"-n\", \"mdx_extra\",\n",
+        "              \"--two-stems=vocals\",\n",
+        "              \"--out\", \"/content/separated\",\n",
+        "              temp_input],\n",
+        "            check=True\n",
+        "        )\n",
+        "\n",
+        "        # Demucs 默认输出路径结构: /content/separated/mdx_extra/temp_sep_input/vocals.wav\n",
+        "        base_output_path = \"/content/separated/mdx_extra/temp_sep_input\"\n",
+        "        vocal_path = os.path.join(base_output_path, \"vocals.wav\")\n",
+        "        instr_path = os.path.join(base_output_path, \"no_vocals.wav\")\n",
+        "\n",
+        "        if os.path.exists(vocal_path):\n",
+        "            # 将结果重命名为与原始视频标题相关的名称\n",
+        "            final_vocal_name = f\"/content/{base_name}_vocals.wav\"\n",
+        "            shutil.move(vocal_path, final_vocal_name)\n",
+        "\n",
+        "            # 【关键点】更新 audio_file_path，让接下来的第 3 步使用纯人声文件\n",
+        "            audio_file_path = final_vocal_name\n",
+        "            print(f\"✅ 人声提取成功: {final_vocal_name}\")\n",
+        "\n",
+        "        if os.path.exists(instr_path):\n",
+        "            final_instr_name = f\"/content/{base_name}_instr.wav\"\n",
+        "            shutil.move(instr_path, final_instr_name)\n",
+        "            print(f\"✅ 伴奏提取成功: {final_instr_name}\")\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ 分离过程出现异常: {e}\")\n",
+        "    finally:\n",
+        "        # 清理临时文件夹\n",
+        "        if os.path.exists(temp_input):\n",
+        "            os.remove(temp_input)\n",
+        "        if os.path.exists(\"/content/separated\"):\n",
+        "            shutil.rmtree(\"/content/separated\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
         "collapsed": true,
         "id": "wUpw9lmRRRaJ",
-        "outputId": "42d77fa6-ac0f-4285-c3bf-569a8268cf6d"
+        "outputId": "c55ed4ff-d462-4f32-cbf9-bce7d2741ac8"
       },
       "outputs": [],
       "source": [
@@ -214,13 +288,14 @@
         "\n",
         "print(f\"识别到 {len(speech_timestamps)} 个语音片段，开始转写并收集数据...\")\n",
         "\n",
-        "# 用于存储所有处理后的数据片段\n",
         "global_segments = []\n",
         "\n",
         "for i, ts in enumerate(speech_timestamps):\n",
         "    start_sample = ts['start']\n",
-        "    end_sample = ts['end']\n",
+        "    end_sample = ts['end'] # VAD 检测到的物理结束点\n",
+        "\n",
         "    global_offset_sec = start_sample / sr\n",
+        "    vad_absolute_end = end_sample / sr  # 计算 VAD 片段的绝对结束时间\n",
         "\n",
         "    chunk = wav[start_sample:end_sample].numpy()\n",
         "\n",
@@ -232,22 +307,31 @@
         "\n",
         "    # 处理这一句的数据结构\n",
         "    if result.all_words():\n",
-        "        # 获取这一句的绝对开始和结束时间\n",
-        "        # 使用第一个词的开始和最后一个词的结束作为句子的边界，这样更紧凑\n",
-        "        # 或者使用 global_offset_sec 作为基准，这里我们使用词级边界\n",
         "        first_word_start = result.all_words()[0].start\n",
-        "        last_word_end = result.all_words()[-1].end\n",
         "\n",
+        "        # 核心修改：\n",
+        "        # 句子的开始时间：依然基于第一个词的开始（避免吸入前面的呼吸声）\n",
+        "        # 句子的结束时间：强制使用 VAD 的结束时间（Vad_absolute_end），填满句尾空白\n",
         "        sentence_abs_start = global_offset_sec + first_word_start\n",
-        "        sentence_abs_end = global_offset_sec + last_word_end\n",
+        "        sentence_abs_end = vad_absolute_end\n",
         "\n",
         "        # 构建单词列表\n",
         "        words_data = []\n",
-        "        for word in result.all_words():\n",
+        "        words_list = result.all_words()\n",
+        "\n",
+        "        for idx, word in enumerate(words_list):\n",
+        "            w_start = global_offset_sec + word.start\n",
+        "            w_end = global_offset_sec + word.end\n",
+        "\n",
+        "            # 细节优化：如果是本句最后一个词，强制将其结束时间延长至句子结束时间\n",
+        "            # 这样在 ASS 卡拉OK模式下，最后一个字的变色会持续到句子完全消失\n",
+        "            if idx == len(words_list) - 1:\n",
+        "                w_end = sentence_abs_end\n",
+        "\n",
         "            words_data.append({\n",
         "                \"word\": word.word.strip(),\n",
-        "                \"start\": global_offset_sec + word.start,\n",
-        "                \"end\": global_offset_sec + word.end\n",
+        "                \"start\": w_start,\n",
+        "                \"end\": w_end\n",
         "            })\n",
         "\n",
         "        segment_data = {\n",
@@ -258,7 +342,6 @@
         "        }\n",
         "        global_segments.append(segment_data)\n",
         "\n",
-        "        # 打印进度\n",
         "        print(f\"[{int((i+1)/len(speech_timestamps)*100)}%] {result.text.strip()}\")\n",
         "\n",
         "# ---------------------------------------------------------\n",
@@ -280,10 +363,10 @@
         "    srt_lines.append(str(idx + 1))\n",
         "    srt_lines.append(f\"{sec_to_srt(seg['start'])} --> {sec_to_srt(seg['end'])}\")\n",
         "    srt_lines.append(seg['text'])\n",
-        "    srt_lines.append(\"\") # 空行\n",
+        "    srt_lines.append(\"\")\n",
         "content_srt = \"\\n\".join(srt_lines)\n",
         "\n",
-        "# 3. Word-level SRT (每个单词一条字幕)\n",
+        "# 3. Word-level SRT\n",
         "word_srt_lines = []\n",
         "w_idx = 1\n",
         "for seg in global_segments:\n",
@@ -299,7 +382,8 @@
         "json_output = {\n",
         "    \"metadata\": {\n",
         "        \"file\": audio_file_path,\n",
-        "        \"duration\": round(total_duration, 2)\n",
+        "        \"duration\": round(total_duration, 2),\n",
+        "        \"language\": \"auto\"\n",
         "    },\n",
         "    \"segments\": global_segments\n",
         "}\n",
@@ -324,20 +408,11 @@
         "    start_fmt = sec_to_ass(seg['start'])\n",
         "    end_fmt = sec_to_ass(seg['end'])\n",
         "\n",
-        "    # 构建卡拉OK文本 {\\kXX}word\n",
         "    k_text = \"\"\n",
-        "    # 为了保证 ASS 时间轴连续，我们需要计算单词之间的相对时间\n",
-        "    # ASS 的 \\k 是以 10ms (centiseconds) 为单位\n",
-        "    current_k_pos = seg['start']\n",
-        "\n",
         "    for i, w in enumerate(seg['words']):\n",
-        "        # 计算单词持续时间 (cs)\n",
         "        duration = w['end'] - w['start']\n",
-        "        k_val = int(duration * 100)\n",
+        "        k_val = int(duration * 100) # 转换为 ASS 的厘秒单位\n",
         "\n",
-        "        # 检查是否与上一个词有空隙，如果有空隙，可以选择加到前一个词，或者插入空 \\k\n",
-        "        # 这里简单处理：直接拼接，因为 VAD 切分后一句话内通常是连续的\n",
-        "        # 但为了更精准，我们在单词前加空格（如果不是第一个词）\n",
         "        prefix = \" \" if i > 0 else \"\"\n",
         "        k_text += f\"{prefix}{{\\\\k{k_val}}}{w['word']}\"\n",
         "\n",
